test/files/neg/migration28.check
migration28.scala:4: error: method scanRight in trait TraversableLike has changed semantics:
This scanRight definition has changed in 2.9.
The previous behavior can be reproduced with scanRight.reverse.
  List(1,2,3,4,5).scanRight(0)(_+_)
                  ^
one error found
